--- a/budget-template.html
+++ b/budget-template.html
@@ -117,9 +117,10 @@
     .obs>div {
       border-radius: 10px;
       border: 1px solid black;
-      width: 500px;
+      width: 470px;
       height: 200px;
       background-color: var(--default-color);
+      padding: 15px;
     }
 
     .totals {
@@ -140,6 +141,9 @@
       border: 1px solid black;
       border-radius: 10px;
       background-color: var(--default-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 </head>
@@ -198,27 +202,27 @@
       <p style="min-height: 15px; width: 100px;"></p>
       <p style="min-height: 15px; width: 100px;"></p>
     </div>
-    
+
   </div>
 
   <div class="footer">
     <div class="obs">
       <p>Observações</p>
       <div>
-
+aaa
       </div>
     </div>
     <div class="totals">
       <div>
         <p>Total de produtos</p>
         <div>
-
+          aaa
         </div>
       </div>
       <div>
         <p>Valor total</p>
         <div>
-
+          aaa
         </div>
       </div>
     </div>
