--- a/budget-template.html
+++ b/budget-template.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
   <style>
     :root {
-      --default-color: rgba(113, 179, 64, 0.3);
+      --default-color: rgb(234, 234, 234);
     }
 
     body {
@@ -15,8 +16,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 100vw;
       box-sizing: border-box;
+      margin-top: 50px;
+      zoom: 80%;
     }
 
     .company {
@@ -49,7 +51,7 @@
     .company-info p {
       width: 230px;
       margin: 0px 10px 0px 20px;
-      text-wrap: wrap;
+      word-wrap: break-word;
     }
 
     .client {
@@ -69,7 +71,7 @@
     }
 
     .client>div>p {
-      text-wrap: wrap
+      word-wrap: break-word;
     }
 
     .products {
@@ -77,7 +79,7 @@
       margin-top: 10px;
       border-radius: 10px;
       width: 840px;
-      text-wrap: wrap;
+      word-wrap: break-word;
       padding: 5px 0;
       background-color: var(--default-color);
     }
@@ -209,7 +211,7 @@
     <div class="obs">
       <p>Observações</p>
       <div>
-aaa
+        aaa
       </div>
     </div>
     <div class="totals">
